Fix scrollbar issue

--- a/assets/scss/base/_utilities.scss
+++ b/assets/scss/base/_utilities.scss
@@ -41,10 +41,7 @@
   .body-container {
     margin-right: 1rem;
     padding-left: 0;
-  }
-
-  .mt-nav {
-    // margin-top: 10rem;
+    width: 90vw;
   }
 
   .mt-nav-2 {
