--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -115,6 +115,7 @@
     left: 0;
     right: 0;
     margin: auto;
+    padding: 0 1rem;
 
     .navbar-search {
       order: 1;
